syntax = "proto3";

package confer; // Replace with your package name

service Confer {
  rpc get  (GetRequest)  returns (GetResponse);
  rpc set  (SetRequest)  returns (SetResponse);
  rpc del  (DelRequest)  returns (DelResponse);
  //rpc List (ListRequest) returns (ListResponse);
}

message GetRequest {
  string path = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string path = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
} 

message DelRequest {
  string path = 1;
}

message DelResponse {
  bool success = 1;
}

//message ListRequest {}

//message ListResponse {
    //repeated string keys = 1;
//}
